--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
               class="btn">Register</button>
 
           </div>
+          <button onclick="document.location.href='https://nighthacks.devpost.com/'"
+              class="btn">Devpost</button>
+
+          </div>
 
           <figure class="hero-banner">
             <img src="./assets/images/hero-banner.png" loading="lazy" alt="hero-banner"
