Services section is not opening from footer while clicking. Fixed Changes!

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
           </li>
 
           <li>
-            <a href="#servies" class="footer-link">Tracks</a>
+            <a href="#services" class="footer-link">Tracks</a>
           </li>
 
           <li>
